Fix overflow of the hero section img

--- a/src/components/HeroSection/HeroSection.css
+++ b/src/components/HeroSection/HeroSection.css
@@ -1,7 +1,6 @@
 .hero__section {
     position: relative;
     z-index: 1;
-    overflow: hidden;
     width: 100%;
     height: auto;
 }
